<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bc"
    android:textColorHint="#FF018786"
    tools:context=".RegistrationPageActivity">

    <TextView
        android:id="@+id/RegShowPassword2"
        android:layout_width="47dp"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:text="Show"
        android:textColor="#FF018786"
        app:layout_constraintBottom_toBottomOf="@+id/etRegPassword"
        app:layout_constraintEnd_toEndOf="@+id/etRegPassword"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="@+id/etRegPassword"
        app:layout_constraintTop_toTopOf="@+id/etRegPassword"
        app:layout_constraintVertical_bias="0.571" />

    <EditText
        android:id="@+id/etRegUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColorHint="#FF018786"
        android:textColor="#000000"
        android:background="@drawable/textview_border"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFullName"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:textColorHint="#FF018786"
        android:textColor="#000000"
        android:background="@drawable/textview_border"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LabelSignUp"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/LabelSignUp"
        android:layout_width="138dp"
        android:layout_height="36dp"
        android:text="Register"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="166dp"
        android:layout_height="22dp"
        android:text="Already have an account?"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        app:layout_constraintVertical_bias="0.8" />

    <Button
        android:id="@+id/btnLoginPage"
        android:layout_width="50dp"
        android:layout_height="22dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="Login"
        android:textColor="#FFFFFF"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        app:layout_constraintVertical_bias="0.8" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="244dp"
        android:text="@string/Register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRegPassword"
        app:layout_constraintVertical_bias="0.8" />

    <EditText
        android:id="@+id/etRegEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/textview_border"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:textColor="#000000"
        android:textColorHint="#FF018786"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRegUserName"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/etRegPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/textview_border"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textColor="#000000"
        android:textColorHint="#FF018786"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRegEmail"
        app:layout_constraintVertical_bias="0.052" />
</androidx.constraintlayout.widget.ConstraintLayout>